
message C2SGuildLogin { // 角色登陆 cmd=GAME_PRIME_LOGIN 返回通用返回
	required int64 guildId = 1;
	optional string language = 2;//语言
}
/**
 * 以下为一些常用获取基本信息协议
 *
 *
 */
message C2SPlayerInfo{//cmd=PLAYER_INFO 获取玩家基本信息
	optional string versionNo = 1;// 版本号(用于版本验证和兼容) 
}
message S2CPlayerInfo{
	required PlayerInfo playerInfo = 1;
}

message S2CPlayerInfoResult{//cmd =PLAYER_INFO_RESULT
	required int32 ret = 1[default=0];
}
message C2SHeroInfo{//cmd=PLAYER_HERO_INFO 获取武将信息
	required int32 heroId = 1;//英雄ID
 }
 message S2CHeroInfo{
  optional HeroInfo heroInfo	=1;//武将信息
 }


message C2SHeroInfoList{//cmd=PLAYER_HERO_INFO_LIST 获取武将信息列表
 }
 message S2CHeroInfoList{
  repeated HeroInfo heroInfo	=1;//武将信息列表
 }

message C2SHeroDumpList{//cmd=HERO_DUMP_LIST 玩家武将战斗存储信息
}
message S2CHeroDumpList{
  	repeated HeroDump expeditionList	=1;//武将远征战存储数据列表
  	repeated HeroDump societyList		=2;//武将公会战存储数据列表
}
 
message C2SHeroCampList{//获取所有武将阵容 cmd= PLAYER_HERO_CAMP_LIST

}
message S2CHeroCampList{
	repeated HeroCamp camp=1;//武将阵容
}
 message C2SPlayerItemList{//cmd=PLAYER_ITEM_INFO_LIST  获取道具列表

 }
 message S2CPlayerItemList{
 	repeated Item itemList = 1;
 }

message C2SChapterInfo{//cmd=CHAPTER_INFO 获取单个章节信息
	required int32 chapterId = 1;
}

message S2CChapterInfo{
	optional ChapterInfo chapterInfo =1;
}

message C2SChapterInfoList{//cmd=CHAPTER_INFO_LIST 获取所有章节信息
	required int32 difficulty =1; // 难度 0-普通1-精英...
}

message S2CChapterInfoList{
	required int32 difficulty =1; // 难度 0-普通1-精英...
	repeated ChapterInfo chapterInfo =2;
}


message C2SStageInfo{//cmd=STAGE_INFO 获取单个关卡信息
	required int32 chapterId =1;
	required int32 stageId = 2;
}
message S2CStageInfo{
	optional StageInfo stageInfo = 1;
}

message C2SStageInfoList{//cmd=STAGE_INFO_LIST 获取指定章节的所有关卡信息
	required int32 difficulty =1; // 难度 0-普通1-精英...
}
message S2CStageInfoList{
	required int32 difficulty =1; // 难度 0-普通1-精英...
	repeated StageInfo stageInfo = 2;
}

message C2SPlayerAttr { //cmd=PLAYER_ATTR_INFO玩家属性 
	optional AttributeType attrType =1[default = eEmpty];
	required int64 num			=2 [default = 0];
}
message S2CPlayerAttr { //cmd=PLAYER_ATTR_INFO玩家属性 
	optional AttributeType attrType =1[default = eEmpty];
	required int64 num			=2 [default = 0];
	optional string info                    =3;
}
message S2CHeroAttr { //cmd=HERO_ATTR_INFO 武将属性
	optional AttributeType attrType =1[default = eEmpty];
	required int32 num		=2;
}

message C2SServerTimeSync { //cmd=SERVIE_TIME_SYNC 同步服务器时间
}
message S2CServerTimeSync { 
	required int64 nowTime	= 1; // 当前服务器时间
	required int32 timeZone	= 2; // 服务器时间与世界标准时间时区间隔时长
}

message C2SRefreshPlayerCd { //cmd=REFRESH_PLAYER_CD 刷新免费恢复类CD时间
	repeated int32 cdTypeList = 1; // 刷新CD类型列表
}
message S2CRefreshPlayerCd {
	repeated int32 cdTypeList 	= 1; // CD类型
	repeated int64 nextFreeTime = 2; // 下次免费恢复时间
}

message C2SPlayerStatData { //cmd=PLAYER_STATISTIC_DATA 玩家统计数据
}
message S2CPlayerStatData {
	optional StatisticInfo statDianJinShou 		= 1; // 点金手数据
	optional StatisticInfo statBuyStrength 		= 2; // 购买体力数据
	optional StatisticInfo statFreeBuyDjs		= 3; // 免费购买点金手数据
	optional StatisticInfo statUseStrength		= 4; // 使用体力数据		
	optional StatisticInfo statUseInvestigate	= 5; // 使用侦查令数据
	optional StatisticInfo statUseMilitaryOrder	= 6; // 使用军令数据
	optional StatisticInfo statPatrolReplace	= 7; // 替换巡逻任务次数
	optional StatisticInfo statExpditionResetHp = 8; // 远征复合次数
	optional StatisticInfo statBuyInvestigate	= 9; // 购买侦查令次数
	optional StatisticInfo statBuyMilitaryOrder	= 10;// 购买军令次数
	optional StatisticInfo statBuySkillPoint	= 11;// 购买技能点次数
	optional StatisticInfo statGoldCardFreeCount = 12;//金币每日免费抽卡次数
	optional StatisticInfo statDiamondsCardFreeCount = 13;//钻石每日免费抽卡次数
	optional StatisticInfo statGoldCardCount = 14;//金币每日抽卡次数
	optional StatisticInfo statDiamondsCardCount = 15;// 钻石免费抽卡次数
	optional StatisticInfo statAskforCount 		= 16; // 索要每日体力次数
	optional StatisticInfo statGiveStrength		= 17; // 赠送好友每日体力次数
	optional StatisticInfo statGainStrength		= 18; // 领取好友每日体力次数
	optional StatisticInfo statOverstepFriend	= 19; // 超越好友每日炫耀次数
	optional StatisticInfo statUnionPkLose		= 20; // 公会战每轮输的次数
}

message S2CRepeatLogin { //cmd=USER_REPEAT_LOGIN 玩家重复登陆
	optional string extraWarn	= 1[default = ""];	
}


message S2CUploadHeroInfo { //cmd=UPLOAD_HERO_INFO 上传武将信息
	repeated int32 heroIds = 1;
	repeated int32 heroFights = 2;
}

// 首次平台登陆奖励  (服务器推送是否可领取)
message S2CFirstPlatLoginReward { //cmd=PLATLOGIN_REWARD_NOTICE
	required int32 gold	= 1;	// 可领取的首次登陆金币奖励
}

// 领取首次平台登陆奖励
message C2SGetFirstPlatLoginReward { //cmd=PLATLOGIN_REWARD_GET
}
message S2CGetFirstPlatLoginReward {
	required int32 result			= 1;//领取结果 0-领取失败 1-领取成功 
	required int32 gold				= 2;//奖励金币
}

message C2SGameCommand {//cmd=GAME_COMMAND GM命令
	required string auth = 1 [default = ""];
	required string command = 2 [default = ""];
}
message S2CGameCommand {
	required int32 ret = 1;
}

// 红点提示
message C2SRedDots {//cmd=RED_DOTS_LIST 红点列表
	repeated RedDotType types	= 1;		// 请求红点类型
}
message S2CRedDots {
	repeated RedDotParam redDots = 1;		// 红点列表
}

message PlayerInfo{//玩家信息
	optional int64 	gold		=1 [default = 0];//银币
	optional int64 	diamond		=2 [default = 0];//钻石
	optional int32 	playerLevel	=3 [default = 0];//等级
	optional int64 	playerExp	=4 [default = 0];//经验
	optional int32 	vipLevel	=5 [default = 0];//VIP等级
	optional int64 	vipExp		=6 [default = 0];//VIP经验
	optional int32 	strength	=7 [default = 0];//体力
	optional int32  iconType	=8 [default = 1];//头像类型, 按位区分0位-为武将ID, 1位-为玩家URL, 2位-取得过PVP排名第一
	optional string	icon		=9 [default = ""];//icon
	optional string playerName	=10[default=""];//角色名
	optional int64 	lastLoginTime=11[default = 0];//最后登录时间
	optional int32  nameChanage =12 [default = 0];//改名次数
	optional int32 country      =13 [default=0];//pvp国家 0：无国家，1：魏国 2：蜀国 3：吴国
	optional int32 fightingForce=14 [default=0];//战斗力
	optional int32 investigate 	=15 [default=0];//侦查令
	optional int32 militaryOrder=16 [default=0];//军令
	optional int32 trial 		=17 [default=0];//试炼币
	optional int32 infinite 	=18 [default=0];//无尽币
	optional int32 honour 		=19 [default=0];//荣誉币
	optional int32 patrolMoney 	=20 [default=0];//巡逻币
	optional int32 guildMoney 	=21 [default=0];//公会贡献币
	optional int32 technoloySteps=22[default=0];//科技系统剩余步数
	optional int32 unionId 		=23 [default=0];//公会Id
	optional string unionName 	=24 [default=""];//公会名称
	optional int32 skilPoint	=25 [default=0];//技能点
	optional bool isFristCard	=26 [default=false];//是否首次抽卡 true是，false否
	optional int32 fightItemRandomNum = 27 [default=0];//战斗道具随机次数
	optional int32 fightItemRandomID = 28 [default=0];//战斗道具随机ID
	optional int32 pvpRank =29 [default=0];//pvp奖杯值
	optional int64 unlimitStrength=30[default=0];//无限体力到期时间戳
	optional int32 starAwardId=31[default=0];//已领取星星奖励ID
	optional int64 createTime	=32[default=0];//角色创建时间
	optional int32 gradeStar	=33[default=0];//评分星级
	optional int32 pvpCupHigh = 34[default=0];//pvp奖杯历史最高
	optional int32 stageScore = 35[default=0];//关卡难度积分
	optional int32 copperKey = 36[default=0];//远征铜钥匙
	optional int32 silverKey = 37[default=0];//远征银钥匙
	optional int32 goldKey = 38[default=0];//远征金钥匙
	optional int64 restExpitionedTime = 39[default=0];//远征关卡重置时间
	optional int32 pvpWinCount = 40[default=0];//PVP胜场次数
	optional string isFristCharge = 41;//是否完成首次 0没有首充 1完成首充
	optional int32 isHotGifbag  = 42[default=0];//是否领取过超值礼包 0未领取 1已领取
	repeated string jmessageAppkey = 43;//极光聊天AppKey
	optional int32 sumAmount = 44[default=0];//累计充值金额(单位：分)
}

message HeroInfo{//英雄信息
	   required int32 	heroId 		=1;//武将ID
	   optional int32 	heroStar 	=2[default = 0];//武将星级
	   repeated Skill 	heroSkill 	=3;//武将技能
	   optional int64	heroExp		=4;//武将经验
	   optional int32	heroLevel	=5;//武将等级
	   repeated Item 	heroItem 	=6;//武将道具
	   optional float	heroHp		=7[default = 1.0];//武将血值
	   optional float 	heroPower 	=8[default = 1.0];//武将怒气值
	   optional int32   status      =9[default=0];//状态，0,无；1，pvp守城；2，巡逻中
	   optional int32   techLife    =10[default=0];//科技附加生命值
	   optional int32   techDef    	=11[default=0];//科技附加物防值
	   optional int32   techRes     =12[default=0];//科技附加魔防值
	   optional int32   techAtt     =13[default=0];//科技附加攻击值
	   optional int32   techCrit    =14[default=0];//科技附加暴击值
	   optional int32   techDodge   =15[default=0];//科技附加闪避值
	   optional int32   techCount   =16[default=0];//完成科技强化次数
	   optional int32   phaseLevel  =17[default=0];//进段等级
	   optional int32   officeLevel =18[default=0];//官职等级
	   optional int32   officeExp	=19[default=0];//官职级验
	   optional int32 	isNew		=20[default=0];//是否为新获取武将 0-不是  1-是 (点开武将时如果为1需要发送点击请求)
 }
 
message HeroDump{//英雄战斗存储信息
 	required int32 	heroId 		=1;//武将ID
 	optional float	heroHp		=2[default = 1.0];//武将血值
  	optional float 	heroPower 	=3[default = 1.0];//武将怒气值
}

message HeroCampList{//英雄阵容
	repeated HeroCamp camp = 1;//阵容

}
message HeroCamp{//阵容
	required int32 campId = 1;//阵容ID
	optional int32 isDefault = 2 [default = 0];
	repeated int32 heroIds = 3;//英雄id
}
message Item{//道具
	required int32 itemId = 1;//道具id
	required int32 itemNum = 2 [default = 0];//道具数量
	optional int32 isNew = 3 [default = 1];//是否新增道具 0新增，1否;武将道具没有这一项
	optional int32 enhancedLevel = 4[default=0];//可选字段 武将装备 强化等级
	optional int32 enchantLevel = 5[default=0];//可选字段 武将装备 附魔等级
}

message Skill{//技能
	required int32 id = 1;//技能id
	required int32 level = 2 [default = 0];//技能等级
}
message ChapterInfo{//章节
	required int32 chapterId = 1;//章节ID
	optional int32 chapterStarNum = 2 [default =0];//章节星级
	optional int32 chest1 = 3 [default =0];//1代表已开启，0代表未开启
	optional int32 chest2 = 4 [default =0];//1代表已开启，0代表未开启
	optional int32 chest3 = 5 [default =0];//1代表已开启，0代表未开启
	optional int32 chapterState  =6 [default =2];//1,已通关  2，播放章节过度动画  3，可打章节

}

message StageInfo{//关卡
	required int32 chapterId = 1;//章节ID
	required int32 stageId =2;//关卡ID
	optional int32 star =3 [default = 0];//关卡星级
	optional int32 winNum =4 [default =0];//战斗次数 小雨哥说就是通关次数
	optional int32 resetNum = 5 [default =0];//关卡重置次数
	optional int32 stageState = 6 [default =2];//1,已通关  2，播放章节过度动画  3，可打关卡 4，抵押猫咪通关
	optional int32 highScore = 7[default =0];//关卡最高分数
	optional int32 highFightCount = 8[default=0];//历史战斗次数
}
 
message StatisticInfo { //统计数据
	optional int32 total 	= 1 [default =0];
	optional int32 daily 	= 2[default =0];
}

message DropReward { // 掉落奖励
	optional int32 gold 	= 1 [default = 0];//奖励金币
	optional int32 diamond 	= 2 [default = 0];//奖励钻石
	optional int32 exp 		= 3 [default = 0];//奖励经验
	optional int32 trial	= 4 [default = 0];//试炼币
	optional int32 infinite = 5 [default = 0];//无尽币
	optional int32 honour	= 6 [default = 0];//荣誉币
	optional int32 food	    = 7 [default = 0];	//粮草
	optional int32 wood	    = 8 [default = 0];	//木材
	optional int32 metal	= 9 [default = 0];	//金属
	optional int32 granite	= 10 [default = 0];	//水晶矿脉
	optional int32 marble	= 11 [default = 0];	//大理石
	repeated Item itemList	= 12;//奖励物品列表
}

enum AttributeType { // 玩家属性
	eEmpty			=0;//空保留字段
  	eExp			=1;//经验
 	eSilver			=2;//银币
 	eDiamond		=3;//钻石
 	eLevel			=4;//玩家等级
 	eVipLv			=5;//VIP等级
 	eVipExp			=6;//VIP经验值
 	eStrength    	=7;//体力
 	eIcon			=8;//头像
 	eStageNum		=9;//副本当天重置次数
	eStarLv			=10;//星级
	eNameChanage    =11;//玩家改名次数
	ePlayerName 	=12;//玩家名称
	eCountry 		=13;//pvp国家 0：无国家，1：魏国 2：蜀国 3：吴国
	eFightingForce 	=14;//战斗力
	eInvestigate 	=15;//侦查令
	eMilitaryOrder 	=16;//军令
	eTrial 			=17;//试炼币
	eInfinite 		=18;//无尽币
	eHonour 		=19;//荣誉币
	ePatrolMoney 	=20;//巡逻币
	eGuildMoney  	=21;//公会贡献币
	eTechnoloySteps =22;//科技系统剩余步数
	eUnionId		=23;//公会ID 0:未加入公会
	eSkillPoint	 	=24;//技能点
	eHonourScore	=25;//荣誉积分
	eIsFirstGlodCard	=26;//是否首次金币抽卡 0 是，1不是
	eisFirstDiamodCard	=27;//是否首次钻石抽卡 0 是，1不是
	eFightItemRandomNum = 28;//战斗道具随机次数
	eFightItemRandomID = 29;//战斗道具随机ID
	ePvpRank =30;//pvp阶级
	eUnlimitStrength=31;//无限体力到期时间戳
	eStarAwardId=32;//已领取星星奖励ID
	eStageScore=33;//关卡难度积分
	eCopperKey=34;//远征铜钥匙
	eSilverKey=35;//远征银钥匙
	eGoldKey=36;//远征金钥匙
	eRestExpitionedTime = 37;//远征关卡重置时间
	eIsFristCharge = 38;//是否完成首次 0没有首充 1完成首充
	eIsHotGifbag = 39;//是否领取过超值礼包 0未领取 1已领取
	eSumAmount = 40;//累计充值金额(单位：分)
}

// 系统红点提示类型
enum RedDotType { // 结点标记属性
	ePvpChestOpen	 	= 1;	//PVP宝箱可以开启
	eFreindAskStrngth	= 2;	//好友索要体力
	eNewEmail			= 3;	//新邮件
	eShopRefresh		= 4;	//商店刷新
	eNewHeroPhoto		= 5;	//新武将(图鉴）
	eSignin				= 6;	//签到
	eFriendApply		= 7;	//好友申请加为好友
	ePlatInviteFriend	= 8;	//平台邀请好友红点
	eYouChosseMe		= 9;   //你选我送活动红点
}

// 战斗结果类型(服务端下发)
enum FightResultType {
	eWinFight		=0;//赢得战斗
	eLoseStepZero	=1;//输了步数用完了
	eLoseHeroDie	=2;//输了武将死亡
	eLoseChessDie	=3;//输了棋盘死棋
	eLoseCollectDisputed =4;//输了收集物未满足
	eLoseScoreLess	=5;//输了积分不够
}

// 战斗结果参数 (客户端上传)
message FightResultParam {
	required int32 aliveHeroCount		= 1;		//活着英雄数量
	required int32 stepNoUse			= 2;		//剩余步数
	required int32 chessDie				= 3;		//是否死棋(0-否 1-死棋了)
	required int32 crushScore			= 4;		//消除得分
	repeated Item items                 = 5;        //收集物
}

// 机器人面板属性
message RotobAttributes {
	required int32 attrId				= 1;		// 属性Id
	required int32 attrVal				= 2;		// 属性值
}

// 匹配到的机器人信息
message RobotInfo {
	 required int32 heroId 				= 1;		//武将ID
	 required int32 heroLevel			= 2;		//武将等级	
	 required int32 heroStar 			= 3;		//武将星级
	 required float heroHp				= 4;		//武将血值
	 repeated RotobAttributes attrList	= 5;		//武将面板属性
	 repeated Skill heroSkill 			= 6;		//武将技能
}

// 红点参数
message RedDotParam {
	required RedDotType dotType		 	= 1;		//红点类型
	required int32 showRedDot			= 2;		//是否显示红点0-不显示-显示
}

//玩家个人信息，展示用
message C2SPlayerShowInfo{
	required int64 playerId = 1[default = 0];//玩家ID
}
message S2CPlayerShowInfo{
	required int64 playerId 		= 1 [default = 0];//玩家ID
	optional string name 			= 2 [default=""];//玩家名称
	optional int32  level			= 3 [default = 0];//玩家等级
	optional int32  iconType		= 4 [default = 1];//头像类型, 按位区分0位-为武将ID, 1位-为玩家URL, 2位-取得过PVP排名第一
	optional string	icon			= 5 [default = ""];//icon
	optional int32  pvpOlScore      = 6 [default = 0];//巅峰对决积分
	optional int32  pvpOlGrade      = 7 [default = 0];//巅峰阶级
	optional int32 unionId			= 8 [default = 0];// 公会ID
	optional string unionName 		= 9 [default = ""];// 公会名称
	optional int32 logoBg			= 10 [default = 0];// 会徽背景
	optional int32 logoStyele		= 11 [default = 0];// 会徽样式
	optional int32 logoBorder		= 12 [default = 0];// 会徽边框
	optional int32 jobTitle			= 13 [default = 0];// 公会职称 1会长 2副会长 3长老 4成员
	optional int32 passStageCount   = 14 [default = 0];//通关数
	optional int32 stageHighestScore= 15 [default = 0];//闯关历史最高得分
	optional int32 collectStarCount = 16 [default = 0];//收集星星数
	optional int32 collectHeroCount = 17 [default = 0];//收集武将数
	optional int32 pvpScoreHighest	= 18 [default = 0];//攻城略地最高得分
    optional int32 pvpOlWinCount	= 19 [default = 0];//巅峰对决胜场数
    optional int32 pvpOlHighestScore= 20 [default = 0];//巅峰对决最高积分
    optional int32 pvpWinCount		= 21 [default = 0];//攻城略地胜场
    optional int32 fightForce		= 22 [default = 0];//最强5武将战斗力
    optional int32 fightRankNo		= 23 [default = 0];//最强5武将战斗力排名
    optional int32 giftCards		= 24 [default = 0];//历史捐卡数
    repeated HeroShowInfo mostHeros = 25 ;//最强前5武将
   optional int32 isOpenExpedition  = 26[default = 0];//是否开启远征活动 0否 1是
}
message HeroShowInfo{
	required int32 heroId = 1 [default = 0];//武将ID
	required int32 heroLv = 2 [default = 0];//武将等级
}
message C2SPlayerGuideId{//新手引导ID PLAYER_GUIDE_ID	= 2019;
	required int32 guideId = 1 [default = 0];// 0 返回id列表 ，其他新增ID返回通用协议
}
message S2CPlayerGuideId{
	repeated int32 guideIds = 1 ;
}
message C2SDrawStarId{//已领取星星奖励ID DRAW_STAR_AWARD_IDS	= 1022
}
message S2CDrawStarId{
	repeated int32 starIds = 1 ;
}
message C2SDrawStarAward{//领取星星奖励cmd=DRAW_STAR_AWARD	= 1016
	required int32 starId = 1;
}